Prevent driver text from overlapping images
Completes DD 71427-21

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -479,7 +479,7 @@ $slider-dot--inactive__color: #a6a6a6;
         }
 
         &-text {
-            bottom: -45px;
+            position: static;
             font-family: $font-family__sans-serif;
             font-weight: $font-weight__semibold;
             text-transform: capitalize;
@@ -489,7 +489,7 @@ $slider-dot--inactive__color: #a6a6a6;
             @include max-screen($screen__m) {
                 bottom: 0;
                 font-size: $font-size__base--desktop;
-                line-height: 1.14;
+                line-height: 1.4;
             }
         }
     }
